--- a/public/config.json
+++ b/public/config.json
@@ -28,5 +28,11 @@
         "id": "fIR2bR8Dmi0",
         "message": "Doğum günün kutlu olsun yaşvak!",
         "file": "cenk_cankaya.jpg"
+    },
+    "620022": {
+        "name": "Eylül",
+        "id": "2mIBS3fHp6A",
+        "message": "Doğum günün kutlu olsun!",
+        "file": "eylul_temizkan.jpg"
     }
 }
