--- a/public/config.json
+++ b/public/config.json
@@ -34,5 +34,11 @@
         "id": "2mIBS3fHp6A",
         "message": "Doğum günün kutlu olsun!",
         "file": "eylul_temizkan.jpg"
+    },
+    "628170": {
+        "name": "Selin",
+        "id": "qB8WF9bp6ys",
+        "message": "Happy birthday girl! ヾ( ￣O￣)ツ",
+        "file": "selin_kasap.jpg"
     }
 }
