--- a/public/config.json
+++ b/public/config.json
@@ -37,7 +37,7 @@
     },
     "628170": {
         "name": "Selin",
-        "id": "qB8WF9bp6ys",
+        "id": "6C33PKdV710",
         "message": "Happy birthday girl! ヾ( ￣O￣)ツ",
         "file": "selin_kasap.jpg"
     }
