--- a/public/config.json
+++ b/public/config.json
@@ -40,5 +40,11 @@
         "id": "6C33PKdV710",
         "message": "Happy birthday girl! ヾ( ￣O￣)ツ",
         "file": "selin_kasap.jpg"
+    },
+    "936321": {
+        "name": "Bartu",
+        "id": "fIR2bR8Dmi0",
+        "message": "Happy birthday girl! ヾ( ￣O￣)ツ",
+        "file": "bartu_cubuk.jpg"
     }
 }
