--- a/public/config.json
+++ b/public/config.json
@@ -46,5 +46,11 @@
         "id": "fIR2bR8Dmi0",
         "message": "Happy birthday girl! ヾ( ￣O￣)ツ",
         "file": "bartu_cubuk.jpg"
+    },
+    "271515": {
+        "name": "Alara",
+        "id": "6C33PKdV710",
+        "message": "Happy birthday girl! ヾ( ￣O￣)ツ",
+        "file": "alara_tanlak.jpg"
     }
 }
