--- a/public/config.json
+++ b/public/config.json
@@ -52,5 +52,11 @@
         "id": "6C33PKdV710",
         "message": "Happy birthday girl! ヾ( ￣O￣)ツ",
         "file": "alara_tanlak.jpg"
+    },
+    "937195": {
+        "name": "Doğan",
+        "id": "H3axP4norfk",
+        "message": "Doğum günün ktlu olsun oni-chan (づ。◕‿‿◕。)づ",
+        "file": "dogan_gunes.jpg"
     }
 }
