--- a/public/config.json
+++ b/public/config.json
@@ -56,7 +56,7 @@
     "937195": {
         "name": "Doğan",
         "id": "H3axP4norfk",
-        "message": "Doğum günün ktlu olsun oni-chan (づ。◕‿‿◕。)づ",
+        "message": "Birthday Happy Oni-chan (づ。◕‿‿◕。)づ",
         "file": "dogan_gunes.jpg"
     }
 }
