--- a/public/config.json
+++ b/public/config.json
@@ -58,5 +58,11 @@
         "id": "H3axP4norfk",
         "message": "Birthday Happy Oni-chan (づ。◕‿‿◕。)づ",
         "file": "dogan_gunes.jpg"
+    },
+    "587743": {
+        "name": "Yunus",
+        "id": "qNoq240t54I",
+        "message":"Doğum günün kutlu olsun! ヾ( ￣O￣)ツ",
+        "file": "yunus_alp.jpg"
     }
 }
