--- a/public/config.json
+++ b/public/config.json
@@ -64,5 +64,11 @@
         "id": "qNoq240t54I",
         "message":"Doğum günün kutlu olsun! ヾ( ￣O￣)ツ",
         "file": "yunus_alp.jpg"
+    },
+    "271409": {
+        "name": "Yiğit",
+        "id": "qQzdAsjWGPg",
+        "message": "Doğum günün kutlu olsun kral 👑",
+        "file": "yigit_ince.jpg"
     }
 }
