--- a/public/config.json
+++ b/public/config.json
@@ -70,5 +70,11 @@
         "id": "qQzdAsjWGPg",
         "message": "Doğum günün kutlu olsun kral 👑",
         "file": "yigit_ince.jpg"
+    },
+    "880643":{
+        "name": "Fatih",
+        "id": "qQzdAsjWGPg",
+        "message": "Doğum günün kutlu olsun kral 👑",
+        "file": "fatih_merdan.jpg"
     }
 }
