--- a/public/config.json
+++ b/public/config.json
@@ -75,6 +75,6 @@
         "name": "Fatih",
         "id": "qQzdAsjWGPg",
         "message": "Doğum günün kutlu olsun kral 👑",
-        "file": "fatih_merdan.jpg"
+        "file": "fatih_merdan.jpeg"
     }
 }
